# revise-tools

./: Dockerfile
backend/: .gitignore  Makefile  pyproject.toml
backend/src/: main.py
backend/src/handlers/: __init__.py  airate_incorrect_profits_handler.py  basic_handler.py  root.py
backend/src/tests/: conftest.py
backend/src/tests/handlers/: test_airate_incorrect_profits_handler.py  test_basic_handler.py
deploy/: deployment.yaml  ingress.yaml  service.yaml
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
frontend/src/components/LeftMenu/: LeftMenu.tsx  index.tsx
frontend/src/components/ProcessXlsxForm/: ProcessXlsxForm.tsx  index.tsx
frontend/src/http_client/: index.ts
frontend/src/pages/Airate/: Airate.tsx  index.tsx
frontend/src/pages/Start/: Start.tsx  index.tsx
frontend/src/routes/: index.tsx
frontend/src/store/: rootReducer.ts  rootSaga.ts
frontend/src/store/ProcessXlsxForm/: actions.ts  reducers.ts  sagas.ts  types.ts
