[project]
name = "revise-tools"
version = "0.1.0"
description = ""
authors = [
    {name = "Michael Tenetko",email = "tenetko@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "fastapi-utils (>=0.8.0,<0.9.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "typing-inspect (>=0.9.0,<0.10.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "ruff (>=0.11.5,<0.12.0)",
    "pytest-cov (>=6.1.1,<7.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "xlrd (>=2.0.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
